--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@ consequatur</h3>
                 <button class="btn">All projects</button>
             </div>
             <h2 class="text-center content__caption">molestias excepturi</h2>
-            <div class="row">
+            <div class="row perferendisTop">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-                    <div class="row perferendisTop">
+                    <div class="row">
                         <div class="col-xs-10 col-xs-offset-1 col-sm-12">
                             <div class="row perferendis">
                                 <div class="col-xs-4 perferendis__img">
@@ -333,8 +333,8 @@ consequatur</h3>
 	<!-- *** FOOTER *** -->
 	<div class="footer">
 	    <div class="container">
-	        <div class="row footerNav">
-	                <ul class="col-xs-12 col-sm-10 col-sm-offset-2 footerNav__item">
+	        <div class="footerNav">
+	                <ul class="footerNav__item">
 	                    <li class="footerNav__items"><a class="footerNav__link" href="">ABOUT COMPANY</a></li>
 	                    <li class="footerNav__items"><a class="footerNav__link" href="">CATALOG</a></li>
 	                    <li class="footerNav__items"><a class="footerNav__link" href="">SERVICES</a></li>
